# arxos

./: .dockerignore  .env  .env.example  .env.production  .gitignore  .golangci.yml  .goreleaser.yml  .mockery.yaml  .pre-commit-config.yaml  .secrets.baseline  .taplo.toml  14KB_IMPLEMENTATION_SUMMARY.md  7.yaml  ANDROID_NDK_TODO.md  ANTI_PREDATORY_NETWORK.md  API_LAYER_IMPLEMENTATION_PLAN.md  API_LAYER_SUMMARY.md  APPLICATION_LAYER_SUMMARY.md  ARCHITECTURAL_ALIGNMENT_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_BIAC.md  ARCHITECTURE_REVIEW.md  ARXOBJECT_COMPLETE_SPECIFICATION.md  ARXOBJECT_SVGX_INTEGRATION_COMPLETE.md  ARXOBJECT_SYMBOL_LIBRARY_SPECIFICATION.md  ARXOS_ARCHITECTURE_DESIGN.md  ARXOS_ARCHITECTURE_V2.md  ARXOS_COMPREHENSIVE_VISION.md  ARXOS_DEVELOPMENT_TRACKER.md  ARXOS_IMPLEMENTATION_PLAN.md  ARXOS_MASTER_VISION.md  ARXOS_PDF_TESTING_LOG.md  ARXOS_VISION.md  ARXO_TOKENOMICS_IMPLEMENTATION.md  ASSESSMENT.md  ArxAddress.md  BILT_TOKENOMICS.md  BOOTSTRAP_DEPLOYMENT_STRATEGY.md  BUILDINGOPS.md  BUILDING_REPOSITORY.md  (+295 more)
arxide/src-tauri/: Cargo.toml  README.md  tauri.conf.json
arxide/src-tauri/src/: application.rs  domain.rs  infrastructure.rs  lib.rs  main.rs
arxide/src-tauri/tests/: desktop_tests.rs  integration_tests.rs
core/svg-parser/: __init__.py  alembic.ini  app.py  pyproject.toml  requirements.txt  setup.py  setup_env.py
core/svg-parser/api/: bim_api.py  main.py
core/svg-parser/cli_commands/: arkit_calibration_cli.py  core_platform_cli.py  failure_detection_cli.py  geometry_resolver_cli.py  logic_engine_cli.py  offline_sync_conflict_resolution_cli.py  realtime_telemetry_cli.py  rule_manager.py  smart_tagging_cli.py  symbol_manager_cli.py  system_simulator.py  test_rule_engine.py  test_rules.py  validate_building.py
core/svg-parser/docs/: ACCESS_CONTROL_IMPLEMENTATION.md  ADMIN_GUIDE.md  ADVANCED_RELATIONSHIP_MANAGEMENT.md  ADVANCED_SECURITY_STRATEGY.md  AHJ_API_INTEGRATION_STRATEGY.md  AHJ_API_INTEGRATION_SUMMARY.md  AHJ_API_PRODUCTION_DEPLOYMENT.md  ARKIT_CALIBRATION_SYNC_SUMMARY.md  AUTHENTICATION_IMPLEMENTATION.md  CI_CD_CLI_INTEGRATION.md  CLI_CI_CD_SUMMARY.md  CODE_DOCUMENTATION.md  DATA_PARTITIONING_IMPLEMENTATION.md  DEVELOPER_GUIDE.md  DEVELOPMENT_STATUS.md  DOCUMENTATION_DEPLOYMENT_SUMMARY.md  DOCUMENTATION_SUMMARY.md  ENHANCED_TESTING_STRATEGY.md  GO_LIVE_EXECUTION_STRATEGY.md  GO_LIVE_EXECUTION_SUMMARY.md  INTEGRATION_GUIDE.md  PDF_UPLOAD_GUIDE.md  PIPELINE_DIAGRAMS.md  PRODUCTION_DEPLOYMENT_STRATEGY.md  REALTIME_FEATURES_IMPLEMENTATION.md  REALTIME_TELEMETRY_IMPLEMENTATION.md  SMART_TAGGING_KITS_STRATEGY.md  TESTING_SUMMARY.md  WEEK3_AUTHENTICATION_SUMMARY.md
core/svg-parser/engine/: README.md  arxfile.yaml  behavior_loader.py  evaluator.py  go.mod  logic_engine_demo.py  requirements.txt
core/svg-parser/examples/: advanced_export_interoperability_demo.py  advanced_infrastructure_demo.py  advanced_relationship_demo.py  advanced_security_demo.py  advanced_svg_features_demo.py  ahj_api_demo.py  ar_mobile_integration_demo.py  bim_health_checker_demo.py  contributor_reputation_demo.py  core_platform_demo.py  enhanced_symbol_recognition_demo.py  logic_engine_demo.py  multi_system_integration_demo.py  nlp_cli_integration_demo.py  schema_validator_example.py  smart_tagging_demo.py  smart_tagging_kits_demo.py  usage_examples.py  validation_integration_example.py
core/svg-parser/middleware/: security.py
core/svg-parser/migrations/: env.py
core/svg-parser/models/: bim.py  bim_metadata.py  bim_relationships.py  parse.py  svg.py  system_elements.py
core/svg-parser/routers/: access_control.py  ahj_api.py  annotate.py  asset_lifecycle.py  auto_snapshot.py  bim_health_checker.py  cmms_maintenance_hooks.py  data_api_structuring.py  data_vendor_api_expansion.py  ingest.py  logic_engine.py  multi_system_integration.py  offline_sync_conflict_resolution.py  parse.py  smart_tagging_kits.py
core/svg-parser/scripts/: CI_CD_VALIDATION_SUMMARY.md  fix_test_imports.py  load_test.py  post_deployment_support.py  update_metadata_references.py  validate_cli.py  validate_symbols_test.py
core/svg-parser/services/: __init__.py  advanced_export_interoperability.py  advanced_security.py  advanced_svg_features.py  ahj_api_integration.py  analytics.py  arkit_calibration_sync.py  arxsvgx.py  auto_snapshot.py  backup_service.py  bim_builder.py  bim_collaboration.py  bim_health_checker.py  bim_object_integration.py  building_code_validator.py  cmms_integration.py  cmms_maintenance_hooks.py  contributor_reputation_engine.py  rule_engine.py  (+31 more)
crates/arx/: Cargo.toml
crates/arx-agent/: Cargo.toml
crates/arx-cli/: Cargo.toml
crates/arx-command-catalog/: Cargo.toml
crates/arxos-agent/: Cargo.toml  README.md
crates/arxos-cli/: Cargo.toml
crates/arxos-core/: Cargo.toml
crates/arxos-hal/: Cargo.toml
crates/arxos-mobile/: Cargo.toml  build.rs  uniffi.toml
crates/arxui/: Cargo.toml
crates_archive_nov2025/arxos/: Cargo.toml  build.rs  test_building_offline_queue.json
crates_archive_nov2025/arxos-wasm/: Cargo.toml
firmware/esp32/: Cargo.toml  platformio.ini
src/core/: CLEAN_ARCHITECTURE.md  Cargo.toml  access_in_practice.rs  aesthetic_pipeline.rs  anchor.rs  ar_streaming.rs  arxobject.rs  arxobject_consciousness.rs  arxobject_simple.rs  arxos_pixel_stream.rs  ascii_bridge.rs  ascii_renderer_2d.rs  bilt_contribution_tracker.rs  branch_mesh_protocol.rs  broadcast_scheduler.rs  building.rs  building_repository.rs  cmms_lifecycle.rs  conversions.rs  crypto.rs  data_aggregator.rs  data_broker_feed.rs  data_consumer_api.rs  data_distribution.rs  data_model_engine.rs  database.rs  database_impl.rs  database_mesh_bridge.rs  detail_store.rs  education_service.rs  equipment.rs  error.rs  field_identity_access.rs  file_storage.rs  floor.rs  identity.rs  inference_engine.rs  lib.rs  merge_review_system.rs  mesh_network.rs  (+41 more)
src/embedded/: Cargo.toml  lib.rs
src/service/: Cargo.toml
src/terminal/: Cargo.toml  app.rs  arxos_commands.rs  commands.rs  main.rs  meshtastic_client.rs  ssh_client.rs  ssh_client_stub.rs
src/tools/: Cargo.toml  mesh_bridge.rs  test_client.rs
(+9148 files in other folders)
