[workspace]
members = [
    "crates/arx",
    "crates/arxui",
    "crates/arxos",
    "crates/arx-command-catalog",
    "crates/arxos-agent",
    "crates/arxos-hal",
    "crates/arxos-hal/esp32-c3",
    "crates/arxos-hal/rp2040",
    "crates/arxos-wasm",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["Joel <joel@arxos.io>"]
license = "MIT"
repository = "https://github.com/arx-os/arxos"
description = "ArxOS - Git for Buildings"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Git dependencies
git2 = { version = "0.20", features = ["vendored-openssl"] }
url = "2.4"

# Spatial dependencies
nalgebra = "0.32"
geo = "0.25"
rstar = "0.10"

# Terminal dependencies
crossterm = "0.27"
ratatui = "0.24"
rand = "0.8"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
glob = "0.3"
tokio = { version = "1.35", features = ["full"] }
regex = "1.10"
sha2 = "0.10"

# Performance dependencies
rayon = "1.8"
indicatif = "0.17"

# Configuration dependencies
toml = "0.8"
notify = "6.1"
num_cpus = "1.16"
tempfile = "3.8"

# Development dependencies
criterion = "0.5"
proptest = "1.4"
serial_test = "3.0"
