[package]
name = "arx"
version = "2.0.0"
edition = "2021"
authors = ["Joel <joel@arxos.io>"]
license = "MIT"
repository = "https://github.com/arx-os/arxos"
description = "ArxOS - Git for Buildings"

[lints.rust]
unsafe_code = "warn"
missing_docs = "allow"  # Too many to fix at once, enable later

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[lib]
name = "arxos"
path = "src/lib.rs"

[[bin]]
name = "arx"
path = "src/main.rs"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Git dependencies
git2 = { version = "0.20", features = ["vendored-openssl"] }
url = "2.4"

# Spatial dependencies
nalgebra = { version = "0.32", features = ["serde-serialize"] }
geo = "0.25"
rstar = "0.10"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
regex = "1.10"
sha2 = "0.10"
log = "0.4"

# Performance dependencies
rayon = "1.8"
indicatif = "0.17"

# Configuration dependencies
toml = "0.8"
notify = "6.1"
num_cpus = "1.16"
tempfile = "3.8"
whoami = "1.4"
dirs = "5.0"

# Optional feature dependencies
tokio = { version = "1.35", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"], optional = true }
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.24", optional = true }
csv = { version = "1.3", optional = true }
arboard = { version = "3.3", optional = true }
bevy = { version = "0.14", optional = true, features = ["dynamic_linking"] }
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
futures-util = { version = "0.3", optional = true }
base64 = "0.22.1"
octocrab = "0.48.0"
bim = "0.0.1"

[features]
default = ["tui"]
tui = ["crossterm", "ratatui", "csv", "arboard"]
render3d = ["bevy"]
agent = ["tokio", "tracing", "tracing-subscriber", "axum", "futures-util"]
full = ["tui", "render3d", "agent"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
serial_test = "3.0"
