[package]
name = "arx"
version = "2.0.0"
edition = "2021"
authors = ["Joel <joel@arxos.io>"]
license = "MIT"
repository = "https://github.com/arx-os/arxos"
description = "ArxOS - Git for Buildings"

[lints.rust]
unsafe_code = "warn"
missing_docs = "allow"  # Too many to fix at once, enable later

[lints.clippy]
# Integrity Track I1: keep Compiler CI (`-D warnings`) green while the tree still
# has large historical unwrap/expect/panic debt (mostly unit tests + older rings).
# These are explicitly allow-listed — not forgotten. Prefer `?` / map_err on new
# production code; do not add new panics on the compiler spine.
# Gradual removal is tracked in arxos_manifest.md §2.6 I1 follow-on.
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
todo = "allow"
unimplemented = "allow"

[lib]
name = "arxos"
path = "src/lib.rs"

[[bin]]
name = "arx"
path = "src/main.rs"

[[bin]]
name = "arx-web"
path = "src/bin/web.rs"
required-features = ["web"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Git dependencies
git2 = { version = "0.20", features = ["vendored-openssl"] }
url = "2.4"

# Spatial dependencies
nalgebra = { version = "0.32", features = ["serde-serialize"] }
geo = "0.25"
rstar = "0.10"
ply-rs = "0.1"
las = "0.8"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
glob = "0.3"
regex = "1.10"
sha2 = "0.10"
log = "0.4"

# Performance dependencies
rayon = "1.8"
indicatif = "0.17"
earcutr = "0.4"

# Configuration dependencies
toml = "0.8"
num_cpus = "1.16"
tempfile = "3.8"
whoami = "1.4"
dirs = "5.0"

# Optional feature dependencies
tokio = { version = "1.35", features = ["full"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter", "fmt", "json"] }
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.24", optional = true }
csv = { version = "1.3", optional = true }
arboard = { version = "3.3", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
futures-util = { version = "0.3", optional = true }
notify = { version = "6.1", optional = true }
russh = { version = "0.40", optional = true }
russh-keys = { version = "0.40", optional = true }
ssh2 = { version = "0.9", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }
base64 = "0.22.1"
octocrab = "0.48.0"
async-trait = "0.1.77"

# Blockchain dependencies (for tokenomics)
ethers = { version = "2.0", optional = true, features = ["abigen", "ws"] }
ethers-contract = { version = "2.0", optional = true }
ethers-signers = { version = "2.0", optional = true }
hex = { version = "0.4", optional = true }
rs_merkle = { version = "1.4", optional = true }

leptos = { version = "0.8.14", features = ["csr"], optional = true }
leptos_meta = { version = "0.8.5", optional = true }
leptos_router = { version = "0.8.10", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }
wasm-bindgen-futures = { version = "0.4.45", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.83", features = ["Window", "Document", "HtmlElement", "Storage", "FileList", "File", "FileReader"], optional = true }
futures = { version = "0.3", optional = true }
gloo-net = { version = "0.6", optional = true }

[features]
# Default: building compiler + primary TUI (spreadsheet, merge, hierarchy render).
# Hardware BACnet/Modbus/MQTT and LiDAR point-cloud 3D viz removed for now (revisit later).
# WASM PWA remains optional: terminal-style UI + camera/AR later — not in default.
default = ["tui"]
tui = ["crossterm", "ratatui", "csv", "arboard", "fuzzy-matcher"]
# Edge agent: git/IFC RPC over WebSocket/SSH (no hardware drivers).
agent = [
    "tokio",
    "tracing",
    "tracing-subscriber",
    "axum",
    "futures-util",
    "notify",
    "russh",
    "russh-keys",
    "ssh2",
    "reqwest",
]
blockchain = [
    "tokio",
    "ethers",
    "ethers-contract",
    "ethers-signers",
    "hex",
    "rs_merkle",
]
web = [
    "tokio",
    "leptos",
    "leptos_meta",
    "leptos_router",
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "console_error_panic_hook",
    "web-sys",
    "futures",
    "gloo-net",
]
full = ["tui", "agent", "blockchain", "web"]

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
serial_test = "3.0"

[[bench]]
name = "core_benchmarks"
harness = false
