[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxos"
version = "0.1.0"
description = "End-to-end infrastructure platform for buildings"
authors = [
    {name = "Arxos Team", email = "team@arxos.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    # Core dependencies
    "fastapi~=0.104.0",
    "uvicorn[standard]~=0.24.0",
    "pydantic~=2.5.0",
    "sqlalchemy~=2.0.0",
    "alembic~=1.12.0",
    "psycopg2-binary~=2.9.0",
    "redis~=5.0.0",
    
    # SVG and BIM processing
    "svgpathtools~=1.6.0",
    "lxml~=4.9.0",
    "numpy~=1.24.0",
    "scipy~=1.11.0",
    
    # AI and ML
    "torch~=2.0.0",
    "transformers~=4.35.0",
    "scikit-learn~=1.3.0",
    "opencv-python~=4.8.0",
    
    # Utilities
    "click~=8.1.0",
    "python-dotenv~=1.0.0",
    "httpx~=0.25.0",
    "aiofiles~=23.2.0",
    "python-multipart~=0.0.6",
    
    # Testing
    "pytest~=7.4.0",
    "pytest-asyncio~=0.21.0",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.11.0",
    
    # Development
    "black~=23.9.0",
    "flake8~=6.1.0",
    "mypy~=1.6.0",
    "pre-commit~=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.4.0",
    "pytest-asyncio~=0.21.0",
    "pytest-cov~=4.1.0",
    "pytest-mock~=3.11.0",
    "black~=23.9.0",
    "flake8~=6.1.0",
    "mypy~=1.6.0",
    "pre-commit~=3.5.0",
    "jupyter~=1.0.0",
    "ipython~=8.15.0",
]

ai = [
    "torch~=2.0.0",
    "transformers~=4.35.0",
    "scikit-learn~=1.3.0",
    "opencv-python~=4.8.0",
    "tensorflow~=2.13.0",
    "keras~=2.13.0",
]

iot = [
    "paho-mqtt~=1.6.0",
    "asyncio-mqtt~=0.13.0",
    "pyserial~=3.5.0",
    "pybluez~=0.23.0",
]

monitoring = [
    "prometheus-client~=0.17.0",
    "structlog~=23.2.0",
    "sentry-sdk~=1.38.0",
]

[project.scripts]
arxos = "arxos.cli:main"
arxos-svg = "arxos.core.svg_parser:main"
arxos-backend = "arxos.core.backend:main"

[project.urls]
Homepage = "https://github.com/capstanistan/arxos"
Documentation = "https://docs.arxos.com"
Repository = "https://github.com/capstanistan/arxos"
"Bug Tracker" = "https://github.com/capstanistan/arxos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["arxos*"]
exclude = ["tests*", "docs*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["arxos"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "lxml.*",
    "cv2.*",
    "PIL.*",
    "sklearn.*",
    "tensorflow.*",
    "torch.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
    "core/svg-parser/tests",
    "services/ai/tests",
    "services/iot/tests",
    "services/cmms/tests",
]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["arxos"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
] 