[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arxos"
version = "0.1.0"
description = "End-to-end infrastructure platform for buildings"
authors = [
    {name = "Arxos Team", email = "team@arxos.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    # Core dependencies
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    
    # SVG and BIM processing
    "svgpathtools>=1.6.0",
    "lxml>=4.9.0",
    
    # Utilities
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.6",
    "structlog>=23.2.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
    "passlib>=1.7.4",
    "PyJWT>=2.8.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.6",
    
    # gRPC
    "grpcio>=1.59.3",
    "grpcio-tools>=1.59.3",
    "protobuf>=4.25.1",
    
    # Monitoring and logging
    "python-json-logger>=2.0.7",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    
    # Development
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "jupyter>=1.0.0",
    "ipython>=8.15.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "locust>=2.17.0",
    "pytest-httpx>=0.25.0",
    "requests>=2.31.0",
    "factory-boy>=3.3.0",
    "faker>=20.1.0",
    "debugpy>=1.8.0",
]

ai = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "opencv-python>=4.8.0",
]

iot = [
    "paho-mqtt>=1.6.0",
    "asyncio-mqtt>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/arxos/arxos"
Documentation = "https://docs.arxos.com"
Repository = "https://github.com/arxos/arxos"
Issues = "https://github.com/arxos/arxos/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["application*", "api*", "domain*", "infrastructure*", "svgx_engine*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["application", "api", "domain", "infrastructure", "svgx_engine"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "grpcio.*",
    "redis.*",
    "psycopg2.*",
    "lxml.*",
    "svgpathtools.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=application",
    "--cov=api",
    "--cov=domain",
    "--cov=infrastructure",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
] 