[package]
name = "arxide"
version = "1.0.0"
description = "Professional desktop CAD IDE for building information modeling"
authors = ["Arxos Team"]
license = "MIT"
repository = "https://github.com/arx-os/arxos"
edition = "2021"
rust-version = "1.70"

[[bin]]
name = "arxide"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [ "shell-open", "path-all", "app-all", "fs-all", "dialog-all", "window-all"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
notify = "6.1"
sysinfo = "0.29"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
config = "0.13"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
