[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arx_svg_parser"
version = "1.0.0"
description = "Comprehensive SVG to BIM conversion and symbol management system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arxos Development Team", email = "dev@arxos.com"}
]
maintainers = [
    {name = "Arxos Development Team", email = "dev@arxos.com"}
]
keywords = ["svg", "bim", "building-information-modeling", "symbol-management", "architecture", "engineering", "construction", "aec", "fastapi", "validation", "json-schema", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "PyJWT>=2.8.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.3",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "requests>=2.31.0",
    "httpx>=0.25.2",
    "jsonschema>=4.20.0",
    "PyYAML>=6.0.1",
    "rapidfuzz>=3.5.2",
    "lxml>=4.9.3",
    "python-json-logger>=2.0.7",
    "structlog>=23.2.0",
    "python-dotenv>=1.0.0",
    "fastapi-cors>=0.0.6",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.1",
    "celery>=5.3.4",
    "redis>=5.0.1",
    "aiofiles>=23.2.1",
    "python-magic>=0.4.27",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.12.1",
    "isort>=5.13.2",
    "flake8>=6.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.5",
    "safety>=2.3.5",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
]
production = [
    "gunicorn>=21.2.0",
    "celery>=5.3.4",
    "redis>=5.0.1",
]

[project.scripts]
arx-svg-parser = "arx_svg_parser.main:main"
arx-validate-symbols = "arx_svg_parser.scripts.validate_symbols:main"

[project.urls]
Homepage = "https://github.com/arxos/arxos"
Documentation = "https://docs.arxos.com"
Repository = "https://github.com/arxos/arxos"
"Bug Tracker" = "https://github.com/arxos/arxos/issues"

[tool.setuptools.packages.find]
include = ["arx_svg_parser*"]

[tool.setuptools.package-data]
arx_svg_parser = ["schemas/*.json", "data/*.json", "docs/*.md"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["arx_svg_parser"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "lxml.*",
    "sklearn.*",
    "pandas.*",
    "numpy.*",
    "celery.*",
    "redis.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["arx_svg_parser"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "test_*"]
skips = ["B101", "B601"]

[tool.safety]
output = "json" 