[package]
name = "arx-agent"
version = "0.1.0"
edition = "2021"
description = "Local companion agent for the ArxOS PWA"

[dependencies]
arx = { path = "../arx" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }

