[package]
name = "arx-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "arx"
path = "src/main.rs"

[dependencies]
arx = { path = "../arx" }
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.38", features = ["full"], optional = true }
bevy = { version = "0.14", optional = true, features = ["dynamic_linking"] }

[features]
default = []
render3d = ["bevy"]
agent = ["tokio"]