[package]
name = "arx-command-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared command metadata for ArxOS CLI, PWA, and agent surfaces"
publish = false

[dependencies]
serde = { workspace = true, features = ["derive"] }

