[package]
name = "arx"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Arx protocol core library"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
geo = { workspace = true }
git2 = { workspace = true }
log = { workspace = true }
notify = { workspace = true }
nalgebra = { workspace = true }
rayon = { workspace = true }
regex = { workspace = true }
rstar = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
indicatif = { workspace = true }
tempfile = { workspace = true }
url = { workspace = true }
glob = { workspace = true }
num_cpus = { workspace = true }

