[package]
name = "arx"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
git2 = "0.18"
uuid = { version = "1.7", features = ["v4"] }
notify = "6.1"
nalgebra = "0.32"
geo = "0.25"
rstar = "0.10"
rayon = "1.8"
regex = "1.10"
sha2 = "0.10"
toml = "0.8"
tracing = "0.1"
indicatif = "0.17"
tempfile = "3.8"
url = "2.4"
glob = "0.3"
num_cpus = "1.16"
chrono = { version = "0.4", features = ["serde"] }
# no tokio, no bevy, no ratatui here → pure library

