[package]
name = "arxos-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Local companion agent for the ArxOS PWA"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws", "macros"] }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["v4"] }
futures-util = "0.3"

[dev-dependencies]
serde_json = { workspace = true }

