[package]
name = "arxos-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ArxOS CLI - Command-line interface"

[dependencies]
# Core dependencies
arxos-core = { path = "../arxos-core" }
serde.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"

# Terminal dependencies
crossterm.workspace = true
ratatui.workspace = true

# Performance dependencies
rayon.workspace = true
indicatif.workspace = true

# Configuration dependencies
toml.workspace = true
notify.workspace = true
num_cpus.workspace = true
tempfile.workspace = true