[package]
name = "arxos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ArxOS Core - Business logic and data processing"

[dependencies]
# Core dependencies
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Git dependencies (optional)
git2 = { workspace = true, optional = true }
url = { workspace = true, optional = true }

# Spatial dependencies
nalgebra.workspace = true
geo.workspace = true
rstar.workspace = true

# Performance dependencies
rayon.workspace = true

# Terminal rendering dependencies
crossterm = { workspace = true, optional = true }
ratatui = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

# Configuration dependencies
toml.workspace = true
notify.workspace = true
num_cpus.workspace = true
tempfile.workspace = true

[features]
default = ["git", "terminal"]
git = ["dep:git2", "dep:url"]
terminal = ["dep:crossterm", "dep:ratatui", "dep:rand"]
core-only = []

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
