[package]
name = "arxos-hal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Aggregated hardware abstraction layer for ArxOS"

[features]
default = []
esp32-c3 = ["arxos-hal-esp32-c3"]
rp2040 = ["arxos-hal-rp2040"]

[dependencies]
arxos-hal-esp32-c3 = { path = "esp32-c3", optional = true }
arxos-hal-rp2040 = { path = "rp2040", optional = true }

