[package]
name = "arxos-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ArxOS Mobile - FFI wrapper for mobile applications"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
arxos-core = { path = "../arxos-core" }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
