[package]
name = "arxos-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ArxOS Mobile - FFI wrapper for mobile applications"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
arxos-core = { path = "../arxos-core", default-features = false, features = ["core-only"] }
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"

# UniFFI for mobile bindings
uniffi = { workspace = true }
uniffi_build = { workspace = true }

[features]
default = []
core-only = []

# Mobile platform features
ios = []
android = []

[build-dependencies]
uniffi_build = { workspace = true }
