[package]
name = "arxos-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WASM bindings for ArxOS"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
arx-command-catalog = { path = "../arx-command-catalog" }
wasm-bindgen = { version = "0.2.95", features = ["serde-serialize"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
once_cell = "1.19"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.45"
js-sys = "0.3.72"

